Example of the crash.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     Chromium <span id="chrome-version"></span>,
     and Electron <span id="electron-version"></span>.
 
+    <br>
+    <br>
+    <a href="foo://abc/index.html">foo://abc/index.html</a>
+
     <!-- You can also require other files to run in this process -->
     <script src="./renderer.js"></script>
   </body>
